--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,21 @@
         "name": "Laravel Daily",
         "email": "info@laraveldaily.com"
     }],
-    "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": ">=5.3.0"
+    },
 
     "extra": {
         "laravel": {
             "providers": [
                 "Laraveldaily\\Timezones\\TimezonesServiceProvider"
             ]
+        }
+    },
+
+    "autoload": {
+        "psr-4": {
+            "Laraveldaily\\Timezones\\": "/src"
         }
     }
 
